# OpenClass

./: .env.example  .gitignore  README.en.md  README.md  README.zh.md  openclass.yaml.example  pyproject.toml
openclass/: __init__.py  ai_engine.py  audio.py  classroom.py  cli.py  config.py  engine.py  events.py  llm.py  materials.py  platforms.py  speech.py  tui.py
tests/: __init__.py  test_ai_engine.py  test_classroom.py  test_config.py  test_events.py  test_llm.py
